post 데이터 받아 렌더링 및 스크롤 스로틀 통한 페이징 적용

--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -8,3 +8,17 @@
   /* color: #1677ff; */
   text-decoration: none;
 }
+.posts_container {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+.post_container {
+  display: block;
+  width: auto;
+  height: 300px;
+}
+.post_img {
+  height: 200px;
+}
